--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,32 +6,30 @@ on:
       - main  # Set to your default branch
 
 jobs:
-  setup-build-deploy:
-    name: Setup, Build, and Deploy
+  deploy:
     runs-on: ubuntu-latest
-
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
 
     - name: Set up Cloud SDK
-      uses: google-github-actions/setup-gcloud@v0
+      uses: google-github-actions/setup-gcloud@master
       with:
+        version: '290.0.0'
+        project_id: ${{ secrets.GCP_PROJECT_ID }}
         service_account_key: ${{ secrets.GCP_SA_KEY }}
-        project_id: ${{ secrets.GCP_PROJECT }}
+        export_default_credentials: true
 
-    - name: Build Docker Image
-      run: |
-        docker build -t gcr.io/${{ secrets.GCP_PROJECT }}/testing:$GITHUB_SHA .
-
-    - name: Configure Docker for GCR
+    - name: Build and push Docker image to Google Container Registry
       run: |
         gcloud auth configure-docker
-
-    - name: Push Image to Google Container Registry
-      run: |
-        docker push gcr.io/${{ secrets.GCP_PROJECT }}/testing:$GITHUB_SHA
+        docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/myapp:$GITHUB_SHA .
+        docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/myapp:$GITHUB_SHA
 
     - name: Deploy to Cloud Run
       run: |
-        gcloud run deploy testing --image gcr.io/${{ secrets.GCP_PROJECT }}/testing:$GITHUB_SHA --platform managed --region us-central1 --allow-unauthenticated
+        gcloud run deploy myapp-service \
+          --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/myapp:$GITHUB_SHA \
+          --platform managed \
+          --region us-central1 \  # Choose your preferred region
+          --allow-unauthenticated
