--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,8 +12,13 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.8'  # Specify a Python version compatible with gcloud
+
     - name: Set up Cloud SDK
-      uses: google-github-actions/setup-gcloud@v0.2.0  # Use a specific version
+      uses: google-github-actions/setup-gcloud@v0.2.0
       with:
         version: '290.0.0'
         project_id: ${{ secrets.GCP_PROJECT_ID }}
