--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,11 +25,11 @@ jobs:
         service_account_key: ${{ secrets.GCP_SA_KEY }}
         export_default_credentials: true
 
-      - name: Build and push Docker image to Google Container Registry
-        run: |
-          gcloud auth configure-docker --quiet
-          docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/myapp:$GITHUB_SHA .
-          docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/myapp:$GITHUB_SHA
+    - name: Build and push Docker image to Google Container Registry
+      run: |
+        gcloud auth configure-docker
+        docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/myapp:$GITHUB_SHA .
+        docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/myapp:$GITHUB_SHA
 
     - name: Deploy to Cloud Run
       run: |
