--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,13 +28,13 @@ jobs:
     - name: Build and push Docker image to Google Container Registry
       run: |
         gcloud auth configure-docker
-        docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/myapp:$GITHUB_SHA .
-        docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/myapp:$GITHUB_SHA
+        docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/alfredaideploy:$GITHUB_SHA .
+        docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/alfredaideploy:$GITHUB_SHA
 
     - name: Deploy to Cloud Run
       run: |
         gcloud run deploy myapp-service \
-          --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/myapp:$GITHUB_SHA \
+          --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/alfredaideploy:$GITHUB_SHA \
           --platform managed \
           --region us-central1 \  # Choose your preferred region
           --allow-unauthenticated
