--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,8 @@ jobs:
     - name: Deploy to Cloud Run
       run: |
         gcloud run deploy myapp-service \
-          --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/alfredaideploy:$GITHUB_SHA \
+          --image gcr.io/alfred-ai-missions-test/testing:TAG \
           --platform managed \
           --region us-central1 \  # Choose your preferred region
           --allow-unauthenticated
+          
