--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,34 +1,31 @@
 name: Deploy to Cloud Run
-
 on:
   push:
     branches:
       - main
-
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
-      - name: Deploy to Cloud Run
-        uses: google-github-actions/deploy-cloudrun@v0.1.1  # Updated version
-
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Login to Google Cloud Registry
+        uses: google-github-actions/setup-gcloud@v0.2.0
         with:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
           service_account_key: ${{ secrets.GCP_SA_KEY }}
-
-      - name: Build Docker Image
-        run: |
-          docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/fastapi-app:${{ github.sha }} .
-          docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/fastapi-app:${{ github.sha }}
-
-      - name: Deploy to Cloud Run
-        uses: google-github-actions/deploy-cloudrun@v0.1.0
+          export_default_credentials: true
+      - name: Build and Push Docker image
+        uses: docker/build-push-action@v2
         with:
-          image: gcr.io/${{ secrets.GCP_PROJECT_ID }}/fastapi-app:${{ github.sha }}
+          push: true
+          tags: gcr.io/${{ secrets.GCP_PROJECT_ID }}/fastapi-app:${{ github.sha }}
+      - name: Deploy to Cloud Run
+        uses: google-github-actions/deploy-cloudrun@v0.1.1
+        with:
           service: fastapi-app
+          image: gcr.io/${{ secrets.GCP_PROJECT_ID }}/fastapi-app:${{ github.sha }}
           location: us-central1 # Choose your Cloud Run region
-          project: ${{ secrets.GCP_PROJECT_ID }}
           credentials: ${{ secrets.GCP_SA_KEY }}
