adding ci/cd again

--- a/.github/workflows/deploy-to-gcloud.yml
+++ b/.github/workflows/deploy-to-gcloud.yml
@@ -24,7 +24,7 @@ jobs:
           pip install --no-cache-dir -r requirements.txt
 
       - name: Authenticate with Google Cloud
-        uses: google-github-actions/setup-gcloud@master
+        uses: google-github-actions/setup-gcloud@v0.2.0
         with:
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           project_id: ${{ secrets.GCP_PROJECT_ID }}
