--- a/.github/workflows/deploy-to-gcloud.yml
+++ b/.github/workflows/deploy-to-gcloud.yml
@@ -28,7 +28,9 @@ jobs:
         with:
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           project_id: ${{ secrets.GCP_PROJECT_ID }}
-
+      - name: Set gcloud account
+        run: |
+          gcloud config set account hashim@***.iam.gserviceaccount.com
       - name: Configure Docker to use the gcloud command-line tool as a credential helper
         run: |
           gcloud --quiet auth configure-docker
