--- a/.github/workflows/deploy-to-gcloud.yml
+++ b/.github/workflows/deploy-to-gcloud.yml
@@ -28,9 +28,19 @@ jobs:
         with:
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           project_id: ${{ secrets.GCP_PROJECT_ID }}
+
+      - name: Create service account key file
+        run: |
+          echo '${{ secrets.GCP_SA_KEY }}' > gcp-key.json
+
+      - name: Activate service account
+        run: |
+          gcloud auth activate-service-account --key-file=gcp-key.json
+
       - name: Set gcloud account
         run: |
           gcloud config set account hashim@***.iam.gserviceaccount.com
+
       - name: Configure Docker to use the gcloud command-line tool as a credential helper
         run: |
           gcloud --quiet auth configure-docker
