--- a/.github/workflows/synk_security.yml
+++ b/.github/workflows/synk_security.yml
@@ -1,10 +1,23 @@
 name: Snyk example
 on: push
 jobs:
-  security:
+  install_requirements:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v2
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.8'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+  security:
+    needs: install_requirements
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
       - uses: snyk/actions/setup@master
       - uses: actions/setup-go@v1
         with:
