--- a/.github/workflows/synk_security.yml
+++ b/.github/workflows/synk_security.yml
@@ -1,28 +1,29 @@
-name: Snyk example
-on: push
+name: Snyk Analysis
+on:
+  push:
+    branches:
+      - main
+  pull_request:
 jobs:
-  install_requirements:
+  snyk:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.8'
+          python-version: '3.8' # Replace with your desired Python version
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-  security:
-    needs: install_requirements
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: snyk/actions/setup@master
-      - uses: actions/setup-go@v1
-        with:
-          go-version: '1.19'
-      - name: Snyk test
-        run: snyk test
+
+      - name: Run Snyk
+        uses: snyk/actions/python@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          args: --file=requirements.txt
